I think tt_R0 functionality is basically in there now

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(beta_est_infectiousness)
 export(format)
+export(format_multiloc)
 export(nimue_deterministic_model)
 export(run)
 importFrom(magrittr,"%>%")
